

This is the ztemplates changelog. Here I will keep you informed about the changes I am currently working on. It also contains the changelog for unreleased versions, so you can see what's coming next. 

snapshot available from [https://oss.sonatype.org/content/repositories/snapshots/org/ztemplates/ztemplates/]

__ztemplates-3.0.0-SNAPSHOT (Not yet released)__ 

* extracted spring features to separate jar module: ztemplates-spring
* added ZIRenderDecorator to annotation @ZRender to allow a decorator to be called when exposing with render=true
* added support for ZFormMap in forms, to allow dynamic forms.
* added support for ZForm to allow dynamic forms.
* modified ZProperty, ZSelectProperty and ZFormSelect to use ZIFormatter and ZIMarshaller
* added ZIMarshaller and ZIFormatter and diverse implementations for modular and reusable Properties  
* change ZIFormAction no longer has a type parameter 
* removed method ZIFormAction.beforeForm because form could be named other than "form" and would require inutile override of beforeForm   
* added class ZTemplatesRunnable so you can use ztemplates outside a http request, in tests, jobs etc.
* removed class ZISecureUrlDecorator, specify the complete url now
* removed ZIFormAction.getForm() because now the field can be accessed directly by the framework 
* added support for multiple forms in the same action, use ZMatch annotation
* added ZPropertyException to ZProperty.parse/getValue/getValues method to allow better automatic error handling in validations.
* added methods ZIFormService.serializeForm() and deserializeForm
* refactored ZMessages
* added class ZMessagesJSON that converts the messages to JSON
* added ZProperty.requiredValidator to allow override of required validation message
* added ZProperty.updateValue and updateStringValues methods. These methods aid integration with [zdependency|https://sourceforge.net/projects/zdependency/] framework for form value updates